[tool.poetry]
name = "tweet-sentiments"
version = "0.1.0"
description = ""
authors = ["vanxh <hello@vanxh.dev>"]
readme = "README.md"
packages = [{ include = "tweet_sentiments" }]

[tool.poetry.scripts]
start = 'tweet_sentiments:main'

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
